<resources>
    <string name="app_name">Bus-Ticket-System</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="time_table">Time Table</string>string>
    <string name="bus_it">Bus IT</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="logo">Logo</string>
    <string name="title_activity_home">BUS TICKET SYSTEM</string>
    <string name="title_activity_routes">Route Select</string>
</resources>
